--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: topminevn # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: TopMine Proxy
@@ -15,9 +15,9 @@ status-website:
   #cname: demo.upptime.js.org
   baseUrl: /status
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: TopMine
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: TopMineVN
+  introTitle: "Status của TopMineVN server"
+  introMessage: Trang này giúp bạn theo dõi trạng thái server Minecraft của TopMineVN cũng như lịch sử trạng thái. Chỉ bao gồm thông tin về main network server, không bao gồm chi tiết từng gamemode Skyblock, Survival,...
   navbar:
     - title: Status
       href: /
