--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: topminevn # Your GitHub organization or username, where this repository l
 repo: status # The name of this repository
 
 sites:
-  - name: TopMine Proxy
+  - name: TopMine Minecraft Network
     url: mc.topmine.vip
     port: 25565
     check: "tcp-ping"
@@ -23,6 +23,10 @@ status-website:
       href: /
 #    - title: GitHub
 #      href: https://github.com/$OWNER/$REPO
+
+assignees:
+  - SaitDev
+skipDeleteIssues: false
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
